--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 *.pbxproj
+
+UICollectionView.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/UserInterfaceState.xcuserstate
+
+UICollectionView.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/UserInterfaceState.xcuserstate
